--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,12 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>6.0.12</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>6.0.12</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
